--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         Chart of the United Kingdom!
       </p>
       <img
-        src="\image_3.png"
+        src="image_3.png"
         alt="Image of David Kushner's hit song Daylight's album"
       />
     </header>
@@ -35,7 +35,7 @@
         <!--The lyrics of chosen song-->
         <h1>Lyrics</h1>
         <img
-          src="\image_2.jpg"
+          src="image_2.jpg"
           alt="Image of David Kushner's hit song Daylight's album"
           width="100"
           height="100"
@@ -106,7 +106,7 @@
       <div>
         <h1>Sources</h1>
         <img
-          src="\image_1.jpg"
+          src="image_1.jpg"
           alt="Image of David Kushner's hit song Daylight's album"
           width="400"
           height="250"
